crates/ty_server/tests/e2e/snapshots/e2e__publish_diagnostics__on_did_save_publishes_open_file_documents.snap
---
source: crates/ty_server/tests/e2e/publish_diagnostics.rs
expression: diagnostics
---
{
  "file://<temp_dir>/src/lib.py": [],
  "file://<temp_dir>/src/main.py": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 19
        },
        "end": {
          "line": 0,
          "character": 30
        }
      },
      "severity": 1,
      "code": "unresolved-import",
      "codeDescription": {
        "href": "https://ty.dev/rules#unresolved-import"
      },
      "source": "ty",
      "message": "Module `typing` has no member `assert_type`"
    }
  ],
  "vscode-notebook-cell://src/notebook.ipynb#0": [],
  "vscode-notebook-cell://src/notebook.ipynb#1": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 19
        },
        "end": {
          "line": 0,
          "character": 30
        }
      },
      "severity": 1,
      "code": "unresolved-import",
      "codeDescription": {
        "href": "https://ty.dev/rules#unresolved-import"
      },
      "source": "ty",
      "message": "Module `typing` has no member `assert_type`"
    }
  ]
}
